--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,10 @@
 <img (dblclick)="onDoubleClick()" src="https://upload.wikimedia.org/wikipedia/commons/3/34/Red_star.svg"height="42" width="42">
 
-<br>
+<br> <!-- If hide is true, this heading will not be visible -->
 <h2 [hidden]="hide">look at the Star </h2>
 
 <button (click)="onButtonClick()">Press me!</button>
-<p>The number of times the button has been pressed is {{count}}.</p>
+<p>The number of times the button has been pressed is {{count}}.</p><!-- changes everytime its clickedd >
 
 <hr>
 <app-list-component></app-list-component>
